Fixed footer being too close to main context

--- a/src/style/markdown.sass
+++ b/src/style/markdown.sass
@@ -197,7 +197,7 @@ body
         color: var(--bgColor)
         flex-shrink: 0
         position: absolute
-        bottom: 0
+        bottom: -48px
         @media screen and (min-width: $breakpoint-tablet)
             height: 64px
         @media screen and (max-width: $breakpoint-tablet)
